# td-rs

./: Cargo.toml
plugins/chop/little-learner/: Cargo.toml
plugins/chop/little-learner/src/: data.rs  lib.rs  model.rs  training.rs
plugins/chop/tdtidal/: Cargo.toml
plugins/chop/tdtidal/src/: lib.rs
plugins/dat/tdtidal/: Cargo.toml
plugins/dat/tdtidal/src/: lib.rs
td-rs-xtask/src/macos/: mod.rs
