[package]
name = "little-learner"
version = "0.1.0"
edition = "2021"

[package.metadata.td-rs]
type = "chop"

[lib]
name = "little_learner_chop"
crate-type = ["lib", "staticlib"]

[dependencies]
burn = { version = "0.15.0", features = ["train", "wgpu"] }
serde = "1.0.214"
td-rs-chop = { path = "../../../td-rs-chop", features = ["tracing"] }
td-rs-derive = { path = "../../../td-rs-derive" }
tracing = "0.1"

[dev-dependencies]
proptest = "1.5.0"
